--- a/src/app/administration/personnes/list-personnes/list-personnes.component.html
+++ b/src/app/administration/personnes/list-personnes/list-personnes.component.html
@@ -661,8 +661,8 @@
     </ng-template>
 </p-dialog>
 
-<app-portrait
+<!-- <app-portrait
     titlePage="Liste Personne"
     [tableHeaders]="cols"
     [tableRows]="tableData"
-></app-portrait>
+></app-portrait> -->
