--- a/src/app/administration/lookup/lookup-dropdown/lookup-dropdown.component.html
+++ b/src/app/administration/lookup/lookup-dropdown/lookup-dropdown.component.html
@@ -5,4 +5,6 @@
     [optionLabel]="optionLabel"
     [showClear]="true"
     [placeholder]="placeholder"
+    [disabled]="loading"
+    (onChange)="onSelectItem($event)"
 ></p-dropdown>
